--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,10 +4,11 @@
 *::after,
 *::before {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  scroll-behavior: smooth;
+  scroll-behavior:unset;
+  font-family: 'Inter' , "Roboto" , sans-serif;
 }
 
 
@@ -26,6 +27,14 @@ body {
 .Toastify__toast-body {
   font-size: 1.4rem;
   font-family: 'Inter';
+}
+
+.hide {
+  display: none !important;
+}
+
+.show {
+  display: block;
 }
 
 
@@ -399,6 +408,239 @@ textarea {
   border-radius: 5px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
+
+.navigation-main {
+  max-width: 1340px;
+  margin: 0 auto;
+  padding: 0 2rem;
+  position: sticky;
+  background-color: #ffffff;
+  top: 0;
+}
+
+.navigation-main .navigation-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-bottom: 1px solid #D9D9D9;
+  padding: 1.5rem 0rem;
+}
+
+.navigation-main .navigation-container .profile img {
+  width: 60px;
+  max-width: 60px;
+  display: block;
+  border: 1px solid #ABABAB;
+  border-radius: 50%;
+}
+
+.navigation-main .navigation-container .search-bar {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  background-color: #F4F4F4;
+  border-radius: 10px;
+  border: 1px solid #ABABAB;
+  max-width: 47.5rem;
+  margin: 0 5rem 0 2.5rem;
+}
+
+.navigation-main .navigation-container .search-bar .search-icon {
+  width: 25px;
+  max-width: 25px;
+  margin-right: 10px;
+}
+
+.navigation-main .navigation-container .search-bar .search-area {
+  width: 100%;
+}
+
+.navigation-main .navigation-container .search-bar .search-area input {
+  outline: none;
+  background-color: #F4F4F4;
+  color: #000;
+  border: 0;
+  width: 100%;
+  font-size: 1.4rem;
+} 
+
+.navigation-main .navigation-container .navigation-desktop {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
+.navigation-main .navigation-container .navigation-desktop .links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6rem;
+  font-weight: 500;
+  font-size: 1.6rem;
+  margin-right: 3rem;
+}
+
+.navigation-main .navigation-container .navigation-desktop .links a {
+    color: #808080;
+    text-decoration: none;
+    position: relative;
+}
+
+.navigation-main .navigation-container .navigation-desktop .links a.active {
+    color: #000;
+    text-decoration: none;
+    font-weight: 500;
+}
+
+.navigation-main .navigation-container .navigation-desktop .links a.active::before {
+    position: absolute;
+    content: '';
+    width: 35px;
+    height: 3px;
+    background-color: #9C254D;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    bottom: -34px;
+    right: 50%;
+    transform: translate(50%, 50%);
+
+}
+
+.navigation-main .navigation-container .navigation-desktop .nav-button .add-project-button {
+  font-weight: 500;
+  color: #ffffff;
+  font-size: 1.6rem;
+  background-color: #000;
+  padding: 1.5rem 4.5rem;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.content-container {
+  max-width: 1340px;
+  margin: 0 auto;
+  padding: 0rem 2rem 4rem 2rem;
+  display: flex;
+  align-items: flex-start;
+  gap: 2.5rem;
+}
+
+.content-container .library {
+  width: 225px;
+  align-self: flex-start;
+  background-color: #2A3990;
+  border-radius: 10px;
+  padding: 2rem;
+  padding-bottom: 10rem;
+  color: #ffffff;
+  font-size: 1.2rem;
+  flex: 1 0 20rem;
+}
+
+.content-container .library .library-title {
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.content-container .library .library-category  {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+  cursor: pointer;
+}
+
+.content-container .library .library-category .category-name,
+.categories-container .categories .library-category .category-name {
+  font-weight: 300;
+  flex: 1;
+  text-underline-offset: 2px;
+}
+
+.content-container .library .library-category .category-name.active,
+.categories-container .categories .library-category .category-name.active {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.content-container .library .library-category .category-count,
+.categories-container .categories .library-category .category-count {
+  width: 28px;
+  height: 21px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
+  color: #2A3990;
+  border-radius: 5px;
+  font-weight: 400;
+}
+
+.content-container .cards-container {
+  display: grid;
+  gap: 3.5rem;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+
+.content-container .cards-container .card {
+  cursor: pointer;
+}
+
+.content-container .cards-container .card img {
+  width: 100%;
+  height: 500px;
+  object-fit: contain;
+  object-position: top;
+  
+}
+
+.categories-container {
+  height: 6rem;
+  max-width: 1340px;
+  padding: 1rem 2rem;
+}
+
+.categories-container .categories {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  background-color: #2A3990;
+  border-radius: 5px;
+  padding: 1rem;
+  color: #ffffff;
+  font-size: 1.2rem;
+  gap: 1.5rem;
+}
+
+.categories-container .categories .library-title {
+  margin-right: 0.5rem;
+}
+
+.categories-container .categories .library-category  {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+  cursor: pointer;
+}
+
+.categories-container .categories .library-title {
+  font-weight: bold;
+}
+
+
+@media screen and (max-width: 1200px) { 
+  .library {
+    display: none !important;
+  }
+
+
+
+}  
 
 
 
