--- a/client/src/App.css
+++ b/client/src/App.css
@@ -471,6 +471,7 @@ textarea {
   align-items: center;
   border-bottom: 1px solid #D9D9D9;
   padding: 1.5rem 0rem;
+  min-height: 9rem;
 }
 
 .navigation-main .navigation-container .profile img {
@@ -481,6 +482,16 @@ textarea {
   display: block;
   border: 1px solid #ABABAB;
   border-radius: 50%;
+}
+
+.navigation-main .navigation-container .profile .profile-image-arrow {
+  width: 35px;
+  max-width: 35px;
+  height: auto;
+  object-fit: unset;
+  display: block;
+  border: none;
+  border-radius:0%;
 }
 
 .navigation-main .navigation-container .search-bar {
@@ -686,10 +697,126 @@ textarea {
   .library {
     display: none !important;
   }
+} 
+
+
+.profile-container {
+  max-width: 1300px;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 4rem;
+}
+
+.profile-container .profile-content {
+  height: 25rem;
+  background-color: #F4F4F4;
+  margin-bottom: 12rem;
+  border-radius: 10px;
+  display: flex;
+  align-items: flex-end;
+}
+
+.profile-container .profile-content .profile-card {
+  display: flex;
+  align-items: flex-end;
+  margin-bottom: -8.5rem;
+  margin-left: 8.5rem;
+  gap: 4.5rem;
+}
+
+.profile-container .profile-content .profile-card .profile-image {
+  max-width: 15rem;
+  width: 100%;
+  background-color: #F4F4F4;
+  border-radius: 50%;
+}
+
+.profile-container .profile-content .profile-card .profile-image img {
+  width: 100%;
+  display: block;
+  height: 15rem;
+  object-fit: contain;
+  border-radius: 50%;
+  border: 4px solid white;
+}
+
+.profile-container .profile-content .profile-card .profile-info {
+  font-size: 1.8rem;
+  color: #808080;
+  margin-bottom: 1rem;
+}
+
+.profile-container .profile-content .profile-card .profile-info .profile-name{
+  color: #000;
+  font-weight: 600;
+  margin-bottom: 1.5rem;
+}
+
+.profile-container .profile-content .profile-card .profile-info .profile-count{
+  display: flex;
+  align-items: center;
+  gap: 5rem;
+}
+
+.profile-container .profile-content .profile-card .profile-info .profile-count strong{
+  color: #000;
+  font-weight: 600;
+}
+
+.library-container {
+  max-width: 1300px;
+  width: 100%;
+  margin: 0 auto;
+  border-top: 2px solid #D9D9D9;
+  font-size: 1.8rem;
+  color: #808080;
+}
+
+.library-container .library-title {
+  color: #000;
+  font-weight: 500;
+  margin-top: 4.5rem;
+  padding-bottom: 1rem;
+  border-bottom: 3px solid #2A3990;
+  display: inline-block;
+  margin-bottom: 3rem;
+}
+
+.library-container .library-content {
+  display: grid;
+  /* flex-wrap: wrap; */
+  gap: 3rem;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.library-container .library-content .library-project {
+  cursor: pointer;
+  max-width: 30rem;
+}
+
+.library-container .library-content .library-project .library-project-image img {
+  width: 100%;
+  object-fit: contain;
+}
+
+
+.profile-logout .add-project-button {
+  font-weight: 500;
+  color: #ffffff;
+  font-size: 1.6rem;
+  background-color: #000;
+  padding: 1.5rem 4.5rem;
+  border-radius: 10px;
+  cursor: pointer;
+}
 
 
 
-}  
+
+
+
+
+
 
 
 
