--- a/client/src/App.css
+++ b/client/src/App.css
@@ -648,7 +648,73 @@ textarea {
 
 .content-container .cards-container .card {
   cursor: pointer;
+  border: 1px solid rgba(94, 103, 123, 0.1);
+  width:100%;
+  position: relative;
+  overflow-y: hidden;
 }
+
+.content-container .cards-container .card .card-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transition: 200ms ease 0s;
+}
+
+
+
+.content-container .cards-container .card .card-box {
+  position: absolute;
+  top: -150px;
+  width: 100%;
+  /* height: 100px; */
+  padding: 15px;
+  color: #000;
+  font-size: 1.4rem;
+  background-color: #f2f3f2;
+  z-index: 9;
+}
+
+.content-container .cards-container .card .card-box .button {
+  width: auto;
+  background-color: #2A3990;
+  border: none;
+  color: white;
+  padding: 1rem 1.5rem;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.content-container .cards-container .card .card-box .card-box-details {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1.5rem;
+  justify-content: space-between;
+  position: relative;
+}
+
+/* .content-container .cards-container .card:hover  {
+  filter: brightness(0.7);
+  transition: 200ms ease 0s;
+} */
+
+.content-container .cards-container .card:hover .card-image  {
+  filter: brightness(0.6);
+  transition: filter 200ms ease-out 0s;
+  background-color: #f2f3f2;
+}
+
+.content-container .cards-container .card:hover .card-box {
+  top: 0;
+  filter: none;
+  transition: 200ms ease 0s;
+}
+
 
 .content-container .cards-container .card img {
   width: 100%;
