--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1022,6 +1022,15 @@ textarea {
   top: 90px;
   background-color: #ffffff;
   z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.pagehref .count-page {
+  display: flex;
+  align-items: center;
+  margin-right: 1.5rem;
 }
 
 .pagehref .pagehref-text span {
